# vxWidget_stud

./: CMakeLists.txt  файлик.txt
.cache/clangd/index/: MainWin.cpp.CF761A75F0977C2C.idx  MainWin.h.CAF1CE87E68E79FA.idx  main.cpp.284BC23FCBE45CF5.idx
src/: MainWin.cpp  MainWin.h  main.cpp
